12/20/13 move computation of color into Solute, since it knows about the color scheme
12/20/13 make solution color change more slowly by moving optional color-stop from 0.5 to 0.25, and making the color-stop ratio configurable per solute, ph-scale-basics#34
12/20/13 move duplicate code related to filling/draining into Solution model element
12/20/13 fix: pH value changes when draining at low volume, ph-scale-basics#19
12/20/13 change import pattern for dot.Util.log10
12/20/13 add implementation-notes.txt and model.txt
12/20/13 migrate MovableDragHandler to scenery-phet, ph-scale-basics#26
12/20/13 change Solute constructor, ph-scale-basics#14
12/19/13 change test for minimum-volume threshold in SolutionNode
12/18/13 misc doc changes requested during code review
12/18/13 added verbose documentation about where things are positioned in the models, as requested in review
12/18/13 put pH meter on top of rendering order, allow it to be dragged anywhere in the ScreenView's layoutBounds
12/18/13 add PHScaleConstants.LAYOUT_BOUNDS, use in all ScreenView constructors
12/18/13 put probe in foreground in BasicsPHMeterNode, so it can't get lost behind pH display
12/18/13 use 'return inherit(....)' consistently
12/17/13 Custom: move zoom buttons to bottom of graph, near the control that makes them visible/invisible
12/17/13 Solutions: fix layout problems that were introduced by changes to Basics
12/17/13 Custom: fix layout problems that were introduced by changes to Basics
12/17/13 lint fix
12/17/13 delete vestigial option.labelNeutral from PHScaleNode
12/17/13 emphasize the '7' tick mark more on the pH scale by using 'Arial black' font family
12/12/13 change color of pH probe image to green, adjust color of pH display to match
12/12/13 change color of pH display to green, change implementation to include optional 'enabled' property
12/12/13 Basics: move pH meter down a bit, so that pH value doesn't go off-screen when pH=15
12/12/13 Basics: tweak layout